--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,15 @@
       "incremental": true,
       "module": "esnext",
       "esModuleInterop": true,
-      "moduleResolution": "node",
+      "moduleResolution": "bundler",
       "resolveJsonModule": true,
       "isolatedModules": true,
       "jsx": "react-jsx",
       "paths": {
         "@/*": [
           "./app/*",
-          "./components/*"
+          "./components/*",
+          "./*"
         ]
       },
       "plugins": [
