--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
+    "react-number-format": "^5.4.4",
     "react-paystack": "^6.0.0",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.4.0",
